--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,7 @@
     padding-bottom: 0rem;
     padding-left: 0rem;
     padding-right: 0rem;
+
 }
 
 .main {
@@ -10,12 +11,24 @@
     padding-right: 4rem;
 }
 
-#map-container {
-    margin-bottom: 0px;
-}
-
-
 #lok-sabha-2024-elections {
     color: red;
     padding-left: 20rem;
+}
+
+div.st-emotion-cache-183lzff.exotz4b0 {
+    padding-left: 15rem;
+}
+
+#current-indian-political-landscape {
+    padding-left: 2.3rem;
+}
+
+/* div.st-emotion-cache-13g57je.e1f1d6gn3 {
+    
+} */
+
+
+div.st-emotion-cache-d4hl0i.e1f1d6gn3 {
+    text-align: center;
 }
