--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,20 @@
+#MainMenu {
+    visibility: hidden;
+
+}
+
+header {
+    visibility: hidden;
+}
+
+footer {
+    visibility: hidden;
+}
+
+div.block-container.st-emotion-cache-1jicfl2.ea3mdgi5 {
+    padding-top: 0;
+}
+
 .block-container {
     padding-top: 4rem;
     padding-bottom: 0rem;
@@ -31,4 +48,9 @@ div.st-emotion-cache-183lzff.exotz4b0 {
 
 div.st-emotion-cache-d4hl0i.e1f1d6gn3 {
     text-align: center;
+}
+
+#pc_caption {
+    color: #bb3f3f;
+    margin-top: 0;
 }
